fix: incorrect z-index of drag-select

--- a/src/components/flowchart/style.css
+++ b/src/components/flowchart/style.css
@@ -72,4 +72,9 @@
     stroke: lightblue;
     fill: lightblue;
     fill-opacity: 0.8;
+    display: none;
+}
+
+#svg .selection.active {
+    display: block;
 }
